# awesome-audio-plugin-framework

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: IncludeCurl.txt
examples/: README.md
examples/base64_encode_decode/: CMakeLists.txt  README.md  base64_scu.c  main.c
examples/binary_compile/: CMakeLists.txt  README.md  main.c  serialise.c
examples/binary_compile/assets/: myfile.txt
examples/fft/: CMakeLists.txt  main.c
examples/file_searching/: CMakeLists.txt  README.md  cute_files.h  main.c
examples/hotreloading/: CMakeLists.txt  README.md  main_macos.c  main_windows.c
examples/hotreloading/watchfolder/: hello.c
examples/hotreloading_macos/: CMakeLists.txt  README.md  main.c
examples/hotreloading_macos/watchfolder/: hello.c  hello.h
examples/https_curl/: CMakeLists.txt  README.md  libcurl_scu.c  main.c
examples/https_cute_tls/: CMakeLists.txt  README.md  main.c  main.m  picohttpparser.h
examples/https_xrequest/: CMakeLists.txt  README.md  main.c  picohttpparser.h
examples/image_stack_blur/: CMakeLists.txt  README.md  main.c  stackblur.c
examples/open_file_dialog/: CMakeLists.txt  open_file_dialog.c
examples/osdialog_open_save_file/: CMakeLists.txt  README.md  main.c
examples/save_file_dialog/: CMakeLists.txt  save_file_dialog.c
examples/stacktrace_macos/: README.md  address_lookup.py  make_stacktrace.c  run.sh
examples/stacktrace_win/: CMakeLists.txt  main.c  run.bat
examples/tinyfiledialogs_open_file/: README.md  open_file_dialog.c
examples/tinyfiledialogs_save_file/: CMakeLists.txt  save_file_dialog.c
examples/tweetnacl/: CMakeLists.txt  README.md  main.c  tweetnacl.c
templates/: README.md
templates/cplug_pugl_nanovg/: CMakeLists.txt  README.md
templates/cplug_pugl_nanovg/src/: config.h  plugin.c
templates/cplug_window_nanovg/: CMakeLists.txt  plugin.c  plugin.h
