cmake_minimum_required(VERSION 3.15)
project(https_cute_tls VERSION 0.0.1 LANGUAGES C)
set(CMAKE_C_STANDARD 99)

if (WIN32)
    add_executable(https_cute_tls main.c)
    target_link_libraries(https_cute_tls "-lschannel")
elseif(APPLE)
    enable_language(OBJC)
    set(CMAKE_OSX_DEPLOYMENT_TARGET 10.14)
    add_executable(https_cute_tls main.m)
    target_link_libraries(https_cute_tls "-framework Network")
    target_compile_options(https_cute_tls PRIVATE -Wno-enum-compare)
else()
    message(FATAL_ERROR "OS not supported")
endif()

target_include_directories(https_cute_tls PRIVATE ../../modules/cute_headers)